Prevent horiz scrolling on small screens

--- a/_sass/partials/_web-wrappers.scss
+++ b/_sass/partials/_web-wrappers.scss
@@ -3,6 +3,7 @@ $web-wrappers: true !default;
 
     #wrapper {
         background-color: $color-background;
+        overflow-x: hidden; // Prevents horizontal scroll esp. on small screens
     }
 
     #content {
